[VOTEIT-4] logic implemented